# Association-Management-System

./: .env.example  .gitignore  AUDIT.md  AUDIT_STATUS.txt  Makefile  PLAN.md  README.md  docker-compose.yml
backend/: Dockerfile  _inspect.py  alembic.ini  debug_test.py  harden.py  harden_modules.py  pyproject.toml  test_import.py  verify_imports.py
backend/alembic/: env.py
backend/alembic/versions/: 0040638c77bf_add_remaining_8_modules_finances_comms_.py  733cc2117d46_add_ai_and_integrations_modules.py  8a1b2c3d4e5f_add_email_sending_logs.py  ac8b8a4a13f3_initial_schema_all_9_modules.py
backend/app/: celery_app.py  config.py  main.py
backend/app/core/: audit.py  database.py  events.py  health.py  llm.py  notifications.py  password.py  reports.py  storage.py
backend/app/core/auth/: __init__.py  router.py
backend/app/core/email/: __init__.py  base.py  factory.py  service.py  smtp_provider.py
backend/app/core/exceptions/: handlers.py
backend/app/core/middleware/: audit.py  rate_limit.py  request_id.py  tenant.py
backend/app/modules/ai/: __init__.py  crud.py  models.py  router.py  schemas.py  services.py
backend/app/modules/analytics/: crud.py  models.py  router.py  schemas.py
backend/app/modules/communications/: crud.py  models.py  router.py  schemas.py
backend/app/tasks/: __init__.py  ai.py  analytics.py  email.py  integrations.py  memberships.py  workflows.py
backend/scripts/: seed.py
backend/templates/emails/: event_registration.html  event_reminder.html  generic.html  invoice_created.html  invoice_overdue.html  invoice_paid.html  membership_renewal.html  membership_welcome.html  password_reset.html
backend/tests/: test_all.py
(+106 files in other folders)
