[project]
name = "assochub"
version = "0.1.0"
description = "AI-Powered Association Management System"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    
    # Validation & Settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    
    # Auth & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "pydantic[email]>=2.10.0",
    
    # Task Queue
    "celery[redis]>=5.4.0",
    
    # Cache & Sessions
    "redis[hiredis]>=5.2.0",
    
    # Search
    "meilisearch-python-sdk>=3.1.0",
    
    # AI / ML
    "openai>=1.55.0",
    "pgvector>=0.3.6",
    "scikit-learn>=1.5.0",
    "numpy>=2.0.0",
    
    # PDF & Documents
    "jinja2>=3.1.0",
    "weasyprint>=63.0",
    "python-docx>=1.1.0",
    
    # Payments
    "stripe>=11.0.0",
    
    # Utilities
    "httpx>=0.28.0",
    "python-dateutil>=2.9.0",
    "orjson>=3.10.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
